Fix dropdown options from bleeding off the right of screen

--- a/frontend/pages/software/ManageSoftwarePage/_styles.scss
+++ b/frontend/pages/software/ManageSoftwarePage/_styles.scss
@@ -74,7 +74,7 @@
           }
           .manage-software-page__vuln_dropdown {
             .Select-menu-outer {
-              width: 364px;
+              width: 250px;
               max-height: 310px;
               .Select-menu {
                 max-height: none;
